# SaaS-boilerplate

./: Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml  example.env
migrations/: 20250622045247_create_project_table.sql  20250625222439_create_sessions_table.sql
src/: auth.rs  main.rs  store.rs
tests/: api.rs
