[package]
name = "axum-web"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = {version = "1.45.1", features = ["full"]}
sqlx = { version = "0.8", features = [ "runtime-tokio-rustls", "migrate", "uuid", "postgres", "macros", "chrono" ] }
rand = "0.9.1"
argon2 = "0.5.3"
thiserror = "2.0.12"
chrono = { version = "0.4.41", features = ["serde", "clock", "unstable-locales" ] }
uuid = { version= "1.17.0", features = ["v4", "serde"] }
dotenvy = "0.15.7"
tower-sessions = "0.14.0"
http = "1.3.1"
tower-sessions-sqlx-store = { version = "0.15.0", features = [ "postgres" ] }
validator = { version = "0.17", features = [ "derive" ] }
reqwest = { version = "0.12.20", features = [ "json" ] }


